Add bundle management updates
